; ModuleID = '/home/carl/AnghaBench/esp-idf/components/wpa_supplicant/src/wps/extr_wps_registrar.c_wps_build_cred_network_key.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/wpa_supplicant/src/wps/extr_wps_registrar.c_wps_build_cred_network_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wpabuf = type { i32 }
%struct.wps_credential = type { i64, i32 }

@MSG_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [29 x i8] c"WPS:  * Network Key (len=%d)\00", align 1
@.str.1 = private unnamed_addr constant [17 x i8] c"WPS: Network Key\00", align 1
@ATTR_NETWORK_KEY = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.wpabuf*, %struct.wps_credential*)* @wps_build_cred_network_key to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wps_build_cred_network_key(%struct.wpabuf* %0, %struct.wps_credential* %1) #0 {
  %3 = alloca %struct.wpabuf*, align 8
  %4 = alloca %struct.wps_credential*, align 8
  store %struct.wpabuf* %0, %struct.wpabuf** %3, align 8
  store %struct.wps_credential* %1, %struct.wps_credential** %4, align 8
  %5 = load i32, i32* @MSG_DEBUG, align 4
  %6 = load %struct.wps_credential*, %struct.wps_credential** %4, align 8
  %7 = getelementptr inbounds %struct.wps_credential, %struct.wps_credential* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = trunc i64 %8 to i32
  %10 = call i32 @wpa_printf(i32 %5, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0), i32 %9)
  %11 = load i32, i32* @MSG_DEBUG, align 4
  %12 = load %struct.wps_credential*, %struct.wps_credential** %4, align 8
  %13 = getelementptr inbounds %struct.wps_credential, %struct.wps_credential* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 8
  %15 = load %struct.wps_credential*, %struct.wps_credential** %4, align 8
  %16 = getelementptr inbounds %struct.wps_credential, %struct.wps_credential* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = call i32 @wpa_hexdump_key(i32 %11, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0), i32 %14, i64 %17)
  %19 = load %struct.wpabuf*, %struct.wpabuf** %3, align 8
  %20 = load i64, i64* @ATTR_NETWORK_KEY, align 8
  %21 = call i32 @wpabuf_put_be16(%struct.wpabuf* %19, i64 %20)
  %22 = load %struct.wpabuf*, %struct.wpabuf** %3, align 8
  %23 = load %struct.wps_credential*, %struct.wps_credential** %4, align 8
  %24 = getelementptr inbounds %struct.wps_credential, %struct.wps_credential* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = call i32 @wpabuf_put_be16(%struct.wpabuf* %22, i64 %25)
  %27 = load %struct.wpabuf*, %struct.wpabuf** %3, align 8
  %28 = load %struct.wps_credential*, %struct.wps_credential** %4, align 8
  %29 = getelementptr inbounds %struct.wps_credential, %struct.wps_credential* %28, i32 0, i32 1
  %30 = load i32, i32* %29, align 8
  %31 = load %struct.wps_credential*, %struct.wps_credential** %4, align 8
  %32 = getelementptr inbounds %struct.wps_credential, %struct.wps_credential* %31, i32 0, i32 0
  %33 = load i64, i64* %32, align 8
  %34 = call i32 @wpabuf_put_data(%struct.wpabuf* %27, i32 %30, i64 %33)
  ret i32 0
}

declare dso_local i32 @wpa_printf(i32, i8*, i32) #1

declare dso_local i32 @wpa_hexdump_key(i32, i8*, i32, i64) #1

declare dso_local i32 @wpabuf_put_be16(%struct.wpabuf*, i64) #1

declare dso_local i32 @wpabuf_put_data(%struct.wpabuf*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
